kubernetes/apps/default/atuin/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: atuin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: atuin
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: external
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEndpoints:
        - matchLabels:
            postgres-operator.crunchydata.com/cluster: postgres-16
            postgres-operator.crunchydata.com/role: pgbouncer
            io.kubernetes.pod.namespace: infrastructure
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
